# localagent

./: .gitignore  CLAUDE.md  GUARDRAILS.md  LICENSE  README.md  benchmark.yaml  pyproject.toml  requirements.txt
config/: default.yaml
src/localagent/: __init__.py  __main__.py  cli.py  config.py
src/localagent/core/: embedder.py  engine.py  registry.py  safefs.py  skill.py  triggers.py
src/localagent/evals/: report.py  runner.py  scenario.py
src/localagent/skills/file_organizer/: README.md  categorizer.py  mover.py  scanner.py  skill.py
src/localagent/skills/file_organizer/evals/: scenarios.py
tests/: test_config.py  test_engine.py  test_evals.py  test_file_organizer.py  test_safefs.py
