[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localagent"
version = "0.1.0"
description = "A local AI agent framework powered by MLX for running autonomous skills"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
localagent = "localagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
